feat(clients): create "findAllClients".
